# YOPO-You-Only-Plan-Once

./: .env.example  .gitignore  README.md  pyproject.toml
benchmarks/: base_benchmark.py  benchmark_manager.py  gaia_bench.py  gsm8k_bench.py
configs/: config.yaml
src/core/agents/llm/: llm_provider.py
src/core/operators/: base_op.py  browser_use_op.py  deep_research_op.py  file_processing_op.py  mcp_op.py  operator_manager.py  utils.py
src/core/operators/llm/: llm_provider.py  llm_wrapped_agent.py
src/core/operators/prompts/: browser_use_prompts.yaml  deep_research_prompts.yaml  file_processing_prompts.yaml  mcp_prompts.yaml
src/core/planning/: abstraction_layer.py  blueprint_templates.py  models.py  pipeline.py  plan_manager.py  utils.py
src/mcp/: mcp_client.py  mcp_config.yaml  mcp_models.py  mcp_utils.py
src/tool/: base_tool.py  code_act_tool.py  final_answer_tool.py  firecrawl_tool.py  tool_manager.py
src/tool/interpreter/: local_interpreter.py
